# seq2seq-translation

./: README.md  pyproject.toml
scripts/2024-10-03-sequence_to_sequence_models_1/: attention_vs_no_attention_sent_len.ipynb  attention_weights.ipynb  beam_search.ipynb  inference_example.ipynb  inference_wmt14_test.sh  padding.ipynb  train.sh
scripts/2025-04-13-sequence_to_sequence_models_2/: debug_param_count.ipynb  decoder_attn.ipynb  decoder_num_tokens.ipynb  encoder_decoder_attn.ipynb  encoder_decoder_performance.ipynb  normalization.ipynb  positional_encoding.ipynb  rnn_attention_weights.ipynb
src/seq2seq_translation/: attention.py  data_loading.py  inference.py  naive_tokenizer.py  rnn.py  run.py  sentence_pairs_dataset.py  spacy_nlp.py  train_evaluate.py
src/seq2seq_translation/config/: _config.py  rnn_config.py  transformer_config.py
src/seq2seq_translation/datasets/: dataset.py  datasets.py  europarl.py  news_commentary.py  wmt14.py  wmt14_test.py
src/seq2seq_translation/models/: attention.py  rnn.py  transformer.py
src/seq2seq_translation/models/attention/: attention.py  multi_head_attention.py
src/seq2seq_translation/models/transformer/: _transformer.py  decoder.py  encoder.py  gpt2.py  (+5 more)
src/seq2seq_translation/tokenization/: create_tokenizer_dataset.py  naive_tokenizer.py  sentencepiece_tokenizer.py  tiktoken_tokenizer.py  tokenize_and_write_to_disk.py  train_sentencepiece.py
src/seq2seq_translation/tokenizers/: sentencepiece_tokenizer.py
src/seq2seq_translation/utils/: ddp_utils.py  logging.py  model_util.py
tests/models/: test_attention.py
