[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seq2seq_translation"
version = "0.1.0"
description = "seq2seq translation"
dependencies = [
    "torch",
    "torchtext",
    "transformers",
#    "spacy"
    "wandb"
]

[tool.setuptools.packages.find]
where = ["src"]